# pm-predict

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: 01_train_model.ipynb  02_evaluate_model.ipynb
src/: data_ingestion.py  feature_engineering.py  train.py  utils_cloud.py
